Live code recompile

--- a/examples/test-project/index.html
+++ b/examples/test-project/index.html
@@ -1,1 +1,20 @@
-404: Not Found
+<!doctype html>
+<html>
+<head>
+	<meta charset="utf-8">
+	<title>Go wasm</title>
+	<link rel="stylesheet" href="./static/app.css">
+	<script src="./static/wasm_exec.js"></script>
+	<script src="./static/entrypoint.js"></script>
+</head>
+<body>	
+
+  <div class="app">
+    <h2>Oak Starter Project</h2>
+
+    <button class="btn btn-primary btn-block" onClick="coolfunc();">Test Function</button>
+    <button class="btn btn-primary btn-block" onClick="holyshit();">Test Function</button>
+  </div>
+
+</body>
+</html>
